--- a/Clients/package.json
+++ b/Clients/package.json
@@ -36,6 +36,7 @@
     "@uppy/xhr-upload": "^4.2.2",
     "axios": "^1.7.7",
     "dayjs": "^1.11.13",
+    "dompurify": "^3.2.6",
     "dotenv": "^16.4.7",
     "framer-motion": "^12.11.0",
     "libphonenumber-js": "^1.11.9",
@@ -55,6 +56,7 @@
   "devDependencies": {
     "@eslint/js": "^9.9.0",
     "@svgr/webpack": "^8.1.0",
+    "@types/dompurify": "^3.0.5",
     "@types/node": "^22.12.0",
     "@types/pako": "^2.0.3",
     "@types/react": "^18.3.5",
